<resources>
    <string name="app_name">Viti</string>
<string name="menu_home">"Trang chủ"</string>
    <string name="menu_transaction">"Giao dịch"</string>
    <string name="menu_category">"Thể loại"</string>
    <string name="menu_overview">"Tổng quan"</string>
    <string name="menu_debt">"Nợ"</string>
    <string name="menu_budget">"Ngân sách"</string>
    <string name="menu_saving">"Tiết kiệm"</string>
    <string name="menu_event">"Sự kiện"</string>
    <string name="menu_recurrences">"Tái phát"</string>
    <string name="menu_models">"Người mẫu"</string>
    <string name="menu_place">"Nơi"</string>
    <string name="menu_people">"Mọi người"</string>
    <string name="menu_converter">"Chuyển đổi"</string>
    <string name="menu_calculator">"Máy tính"</string>
    <string name="menu_search_atm">"Tìm kiếm atm"</string>
    <string name="menu_search_bank">"Ngân hàng tìm kiếm"</string>
    <string name="menu_setting">"Cài đặt"</string>
    <string name="menu_support_developer">"Nhà phát triển hỗ trợ"</string>
    <string name="menu_about">"Trong khoảng"</string>
    <string name="menu_transaction_tab_transactions">"Giao dịch"</string>
    <string name="menu_transaction_tab_transfers">"Chuyển"</string>
    <string name="menu_category_tab_income">"Thu nhập"</string>
    <string name="menu_category_tab_expense">"Chi phí"</string>
    <string name="menu_category_tab_system">"Hệ thống"</string>
    <string name="menu_debt_tab_debt">"Món nợ"</string>
    <string name="menu_debt_tab_credit">"Tín dụng"</string>
    <string name="menu_budget_tab_running">"Đang chạy"</string>
    <string name="menu_budget_tab_expired">"Đã hết hạn"</string>
    <string name="menu_saving_tab_running">"Đang chạy"</string>
    <string name="menu_saving_tab_completed">"Đã hoàn thành"</string>
    <string name="menu_event_tab_running">"Đang chạy"</string>
    <string name="menu_event_tab_completed">"Đã hoàn thành"</string>
    <string name="menu_model_tab_transactions">"Giao dịch"</string>
    <string name="menu_model_tab_transfers">"Chuyển"</string>
    <string name="action_new_wallet">"Ví mới"</string>
    <string name="action_manage_wallets">"Quản lý ví"</string>
    <string name="action_pay_debt">"Trả"</string>
    <string name="action_receive_debt">"Nhận được"</string>
    <string name="action_withdraw">"Rút tiền"</string>
    <string name="action_deposit">"Tiền gửi"</string>
    <string name="action_withdraw_everything">"Rút tất cả mọi thứ"</string>
    <string name="action_add">"Thêm vào"</string>
    <string name="action_new">"Mới"</string>
    <string name="action_edit">"Biên tập"</string>
    <string name="action_search">"Tìm kiếm"</string>
    <string name="action_filter">"Bộ lọc"</string>
    <string name="action_remove">"Tẩy"</string>
    <string name="action_open">"Mở"</string>
    <string name="action_undo">"Hủy bỏ"</string>
    <string name="action_skip">"Nhảy"</string>
    <string name="msg_no_wallet_found">"Không tìm thấy ví"</string>
    <string name="msg_add_one_wallet">"Vui lòng thêm một ví"</string>
    <string name="hint_total_sum">"Toàn bộ"</string>
    <string name="hint_name">"Tên"</string>
    <string name="hint_description">"Sự miêu tả"</string>
    <string name="hint_currency">"Tiền tệ"</string>
    <string name="hint_money">"Tiền bạc"</string>
    <string name="hint_start_money">"Số tiền ban đầu"</string>
    <string name="hint_not_exclude_wallet">"Hiển thị ví này trong tổng số"</string>
    <string name="hint_category">"Thể loại"</string>
    <string name="hint_parent_category">"Gia phả"</string>
    <string name="hint_show_category_report">"Hiển thị danh mục này trong các báo cáo"</string>
    <string name="hint_show_category_report_on">"Thể loại này được bao gồm trong các báo cáo"</string>
    <string name="hint_show_category_report_off">"Thể loại này không được bao gồm trong các báo cáo"</string>
    <string name="hint_confirmed">"Đã xác nhận"</string>
    <string name="hint_show_in_total">"Hiển thị trong tổng số ví"</string>
    <string name="hint_income">"Thu nhập = earnings"</string>
    <string name="hint_expense">"Chi phí"</string>
    <string name="hint_date">"Ngày"</string>
    <string name="hint_start_date">"Ngày bắt đầu"</string>
    <string name="hint_end_date">"Ngày cuối"</string>
    <string name="hint_expiration_date">"Ngày hết hạn"</string>
    <string name="hint_time">"Thời gian"</string>
    <string name="hint_wallet">"Ví tiền"</string>
    <string name="hint_wallets">"Ví tiền"</string>
    <string name="hint_wallet_from">"Từ"</string>
    <string name="hint_wallet_to">"Đến"</string>
    <string name="hint_recurrence">"Sự tái xuất"</string>
    <string name="hint_recurrence_invalid">"Tái phát không hợp lệ"</string>
    <string name="hint_event">"Biến cố"</string>
    <string name="hint_people">"Mọi người"</string>
    <string name="hint_place">"Địa điểm"</string>
    <string name="hint_note">"Ghi chú"</string>
    <string name="hint_tax">"Thuế"</string>
    <string name="hint_type">"Thể loại"</string>
    <string name="hint_incomes">"Thu nhập"</string>
    <string name="hint_expenses">"Chi phí"</string>
    <string name="hint_net_incomes">"Thu nhập ròng"</string>
    <string name="hint_summary">"Tóm lược"</string>
    <string name="hint_address">"Địa chỉ nhà"</string>
    <string name="hint_size_unknown">"Kích thước không xác định"</string>
    <string name="hint_address_unknown">"Địa chỉ không xác định"</string>
    <string name="hint_unknown">"Không xác định"</string>
    <string name="hint_directory">"Danh mục"</string>
    <string name="hint_navigate_up">"Điều hướng lên"</string>
    <string name="hint_password">"Mật khẩu"</string>
    <string name="hint_atm_name">"Tên ATM"</string>
    <string name="hint_bank_name">"Tên ngân hàng"</string>
    <string name="hint_attachments">"Tệp đính kèm"</string>
    <string name="hint_operation_in_progress">"Trong tiến trình…"</string>
    <string name="hint_search_something">"Tìm kiếm thứ gì đó"</string>
    <string name="hint_exchange_rate">"Tỷ giá"</string>
    <string name="hint_recurrence_finished">"Đã kết thúc"</string>
    <string name="hint_new_folder">"Thư mục mới"</string>
    <string name="hint_import_format">"Định dạng nhập"</string>
    <string name="hint_export_format">"Định dạng xuất"</string>
    <string name="hint_import_file">"Tập tin cần nhập"</string>
    <string name="hint_export_folder">"Xuất thư mục"</string>
    <string name="hint_export_optional_columns">"Cột tùy chọn"</string>
    <string name="hint_export_unique_wallet">"Tham gia giao dịch từ các ví khác nhau"</string>
    <string name="hint_data_format_csv">"CSV"</string>
    <string name="hint_data_format_xls">"XLS"</string>
    <string name="hint_data_format_pdf">"PDF"</string>
    <string name="hint_iso_code">"Mã ISO"</string>
    <string name="hint_symbol">"Biểu tượng"</string>
    <string name="hint_decimals">"Số thập phân"</string>
    <string name="hint_show_currency_symbol">"Hiển thị ký hiệu tiền tệ"</string>
    <string name="hint_group_digits">"Chữ số nhóm"</string>
    <string name="hint_round_decimals">"Số thập phân tròn"</string>
    <string name="hint_show_always_plus_minus">"Luôn hiển thị / - biểu tượng"</string>
    <string name="hint_auto_backup_enabled">"Đã bật dịch vụ"</string>
    <string name="hint_auto_backup_wifi_only">"Chỉ trên mạng WiFi"</string>
    <string name="hint_auto_backup_only_if_data_changed">"Chỉ khi dữ liệu được thay đổi"</string>
    <string name="hint_auto_backup_every_n_hours">"Mỗi% d giờ"</string>
    <string name="hint_auto_backup_folder">"Thư mục"</string>
    <string name="hint_auto_backup_root_folder">"Nguồn gốc"</string>
    <string name="total_wallet_name">"Toàn bộ"</string>
    <string name="title_activity_new_currency">"Tiền tệ mới"</string>
    <string name="title_activity_edit_currency">"Chỉnh sửa tiền tệ"</string>
    <string name="title_activity_new_wallet">"Ví mới"</string>
    <string name="title_activity_edit_wallet">"Chỉnh sửa ví"</string>
    <string name="title_activity_new_transaction">"Giao dịch mới"</string>
    <string name="title_activity_edit_transaction">"Chỉnh sửa giao dịch"</string>
    <string name="title_activity_new_transfer">"Chuyển khoản mới"</string>
    <string name="title_activity_edit_transfer">"Chỉnh sửa chuyển khoản"</string>
    <string name="title_activity_new_category">"Thể loại mới"</string>
    <string name="title_activity_edit_category">"Chỉnh sửa danh mục"</string>
    <string name="title_activity_new_debt">"Nợ mới"</string>
    <string name="title_activity_edit_debt">"Sửa nợ"</string>
    <string name="title_activity_new_budget">"Ngân sách mới"</string>
    <string name="title_activity_edit_budget">"Chỉnh sửa ngân sách"</string>
    <string name="title_activity_new_saving">"Tiết kiệm mới"</string>
    <string name="title_activity_edit_saving">"Chỉnh sửa tiết kiệm"</string>
    <string name="title_activity_new_event">"Sự kiện mới"</string>
    <string name="title_activity_edit_event">"Chỉnh sửa sự kiện"</string>
    <string name="title_activity_new_recurrence">"Tái phát mới"</string>
    <string name="title_activity_edit_recurrence">"Chỉnh sửa tái phát"</string>
    <string name="title_activity_new_model">"Người mẫu mới"</string>
    <string name="title_activity_edit_model">"Chỉnh sửa mô hình"</string>
    <string name="title_activity_new_place">"Chỗ mới"</string>
    <string name="title_activity_edit_place">"Chỉnh sửa địa điểm"</string>
    <string name="title_activity_new_person">"Người mới"</string>
    <string name="title_activity_edit_person">"Chỉnh sửa người"</string>
    <string name="title_activity_wallet_sort">"Sắp xếp ví"</string>
    <string name="title_activity_currency_list">"Tiền tệ"</string>
    <string name="title_activity_category_picker">"Chọn một danh mục"</string>
    <string name="title_activity_category_sort">"Sắp xếp danh mục"</string>
    <string name="title_activity_icon_list">"Biểu tượng"</string>
    <string name="title_activity_backup_services">"Dịch vụ sao lưu"</string>
    <string name="title_activity_about">"Trong khoảng"</string>
    <string name="title_activity_calculator">"Máy tính"</string>
    <string name="title_activity_currency_converter">"Chuyển đổi tiền tệ"</string>
    <string name="title_activity_search_transaction">"Tìm kiếm"</string>
    <string name="title_activity_calendar">"Lịch"</string>
    <string name="title_activity_map">"Bản đồ"</string>
    <string name="title_activity_backend_explorer">"Khám phá phụ trợ"</string>
    <string name="setting_category_utility_notification">"Thông báo"</string>
    <string name="setting_category_utility_security">"Bảo vệ"</string>
    <string name="setting_category_utility_exchange_rates">"Tỷ giá hối đoái"</string>
    <string name="setting_title_daily_reminder">"Nhắc nhở hàng ngày"</string>
    <string name="setting_title_security">"Bảo vệ truy cập"</string>
    <string name="setting_title_exchange_rate_source">"Dịch vụ"</string>
    <string name="setting_title_exchange_rate_api_key">"Khóa api tùy chỉnh"</string>
    <string name="setting_title_exchange_rate_update">"Cập nhật tỷ giá hối đoái"</string>
    <string name="setting_title_currency_management">"Quản lý tiền tệ"</string>
    <string name="setting_summary_currency_management">"Thêm tiền tệ tùy chỉnh"</string>
    <string name="setting_category_database_backup">"Sao lưu"</string>
    <string name="setting_title_database_backup_services">"Dịch vụ sao lưu"</string>
    <string name="setting_summary_database_backup_services">"Tạo và khôi phục cơ sở dữ liệu"</string>
    <string name="setting_category_database_import_export">"Nhập khẩu xuất khẩu"</string>
    <string name="setting_title_import_data">"Ngày nhập khẩu"</string>
    <string name="setting_summary_import_data">"Đọc dữ liệu từ tệp bên ngoài"</string>
    <string name="setting_title_export_data">"Xuất dữ liệu"</string>
    <string name="setting_summary_export_data">"Viết dữ liệu trên một tệp bên ngoài"</string>
</resources>