<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019.
  ~
  ~ This file is part of Viti.
  ~
  ~ Viti is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Viti is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Viti.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <com.oriondev.Viti.ui.preference.ThemedPreferenceCategory
        android:title="@string/setting_category_database_backup" >

        <com.oriondev.Viti.ui.preference.ThemedPreference
            android:key="backup_services"
            android:title="@string/setting_title_database_backup_services"
            android:summary="@string/setting_summary_database_backup_services"/>

    </com.oriondev.Viti.ui.preference.ThemedPreferenceCategory>

    <com.oriondev.Viti.ui.preference.ThemedPreferenceCategory
        android:title="@string/setting_category_database_import_export" >

        <com.oriondev.Viti.ui.preference.ThemedPreference
            android:key="import_data"
            android:title="@string/setting_title_import_data"
            android:summary="@string/setting_summary_import_data"/>

        <com.oriondev.Viti.ui.preference.ThemedPreference
            android:key="export_data"
            android:title="@string/setting_title_export_data"
            android:summary="@string/setting_summary_export_data"/>

    </com.oriondev.Viti.ui.preference.ThemedPreferenceCategory>

</android.support.v7.preference.PreferenceScreen>